# AI-CALCULATOR

./: README.md
CALCY/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
CALCY/src/: App.tsx
CALCY/src/home/: DraggableLatex.tsx  Home.tsx  addAns.tsx  constants.ts  draggable.tsx
CALCY_BE/: .env  pyproject.toml
CALCY_BE/src/calcy/: main.py  routes.py
